change text member to user
