# backend/swagger.json
@@ -23,36 +23,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/member": {
-			"post": {
-				"operationId": "CreateMember",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"security": [
-					{
-						"jwt": []
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {}
-						}
-					}
-				}
-			}
-		},
-		"/member/{name}": {
+		"/user/{name}": {
 			"get": {
 				"operationId": "GetUser",
 				"responses": {
@@ -82,7 +53,36 @@
 				]
 			}
 		},
-		"/member/{login}": {
+		"/user/profile": {
+			"get": {
+				"operationId": "Profile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"user": {}
+									},
+									"required": [
+										"user"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/user/{login}": {
 			"post": {
 				"operationId": "Login",
 				"responses": {
@@ -126,6 +126,31 @@
 								],
 								"type": "object"
 							}
+						}
+					}
+				}
+			}
+		},
+		"/user": {
+			"post": {
+				"operationId": "Createuser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
 						}
 					}
 				}
